--- a/deb/data/data/com.termux/files/usr/share/applications/code-url-handler.desktop
+++ b/deb/data/data/com.termux/files/usr/share/applications/code-url-handler.desktop
@@ -2,7 +2,7 @@
 Name=Visual Studio Code - URL Handler
 Comment=Code Editing. Redefined.
 GenericName=Text Editor
-Exec=/usr/share/code/code --open-url %U
+Exec=code --open-url %U
 Icon=com.visualstudio.code
 Type=Application
 NoDisplay=true
